istio-delegate-sidecar-authorizationpolicy/reviews/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: reviews
  namespace: review
spec:
  selector:
    app: reviews
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
