istio-delegate-sidecar-authorizationpolicy/reviews/vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: reviews
  namespace: review
spec:
  http:
  - route:
    - destination:
        host: reviews.review.svc.cluster.local
